--- a/src/components/sections/Quote.astro
+++ b/src/components/sections/Quote.astro
@@ -1,8 +1,6 @@
 ---
-import Button from "./Button.astro";
+import Button from "../Button.astro";
 import ImagesCarousel from "./ImagesCarousel.astro";
-//TODO: odłozyć ładowanie karuzeli do wejścia w ekran
-// TODO: Karuzela jest popsuta po cofnięciu strony w historii
 ---
 <section class="relative overflow-hidden">
   <div class="quote-decorator"></div>
