--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Informations from "../components/Informations.astro";
-import Knowledge from "../components/Knowledge.astro";
-import Quote from "../components/Quote.astro";
+import Informations from "../components/sections/Informations.astro";
+import Knowledge from "../components/sections/Knowledge.astro";
+import Quote from "../components/sections/Quote.astro";
 import Hero from "../components/Hero/Home.astro";
 import Layout from "../layouts/Layout.astro";
 ---
