--- a/src/components/Partials/Hamburger.astro
+++ b/src/components/Partials/Hamburger.astro
@@ -1,5 +1,5 @@
 ---
-import type { Color } from "../Logo.astro"
+import type { Color } from "./Logo.astro"
 
 const { type: Color } = Astro.props;
 const color = Astro.props.type === "light" ? "white" : "black";
