--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro";
 import { getPage, getPages, getPost, getPosts, type Page } from "../utils/sanity";
 import Hero from "../components/Hero/Page.astro";
 import { truncateText } from '../utils/textHelpers';
+import ArticleContainer from '../components/ArticleContainer.astro';
 
 export async function getStaticPaths() {
   const pages = await getPages();
@@ -30,9 +31,9 @@ const description = truncateText(page.body);
       <div class="hero-heading">
         <h1 class="heading h0 text-center mt-10 mb-20">{page.title}</h1>
       </div>
-      <div class="narrow leading-relaxed mx-auto flex flex-col gap-10 mb-10">
+      <ArticleContainer>
         <PortableText value={page.body} />
-      </div>
+      </ArticleContainer>
     </div>
   </section>
 </Layout>
