--- a/src/components/Analytics.astro
+++ b/src/components/Analytics.astro
@@ -1,8 +1,10 @@
 ---
+
 ---
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ2TPZS4QN"></script>
 <script>
+  // @ts-nocheck
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
