--- a/src/components/sections/Drawer.astro
+++ b/src/components/sections/Drawer.astro
@@ -1,5 +1,5 @@
 ---
-import { siteSettings, navLinks } from "../../utils/store";
+import { navLinks } from "../../utils/store";
 import Logo from "../Partials/Logo.astro";
 import CloseMenu from "../Partials/CloseMenu.astro";
 
