--- a/src/components/sections/Quote.astro
+++ b/src/components/sections/Quote.astro
@@ -1,6 +1,6 @@
 ---
 import Button from "../Button.astro";
-import ImagesCarousel from "./ImagesCarousel.astro";
+import ImagesCarousel from "../ImagesCarousel.astro";
 ---
 <section class="relative overflow-hidden">
   <div class="quote-decorator"></div>
