change analytics service

--- a/src/components/Analytics.astro
+++ b/src/components/Analytics.astro
@@ -2,12 +2,4 @@
 
 ---
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ2TPZS4QN"></script>
-<script>
-  // @ts-nocheck
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HJ2TPZS4QN');
-</script>
+<script data-goatcounter="https://parafiapogorzela.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
