--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,8 @@ const { title, description } = Astro.props;
       rel="stylesheet"
     />
 
+    <script data-goatcounter="https://parafiapogorzela.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
     <title>{title}</title>
     <meta name="description" content={description} />
     <ViewTransitions />
