--- a/src/components/sections/Informations.astro
+++ b/src/components/sections/Informations.astro
@@ -13,7 +13,7 @@ import Button from "../Button.astro";
         <Button
           priority="tertiary"
           title="Zobacz intencje mszalne"
-          url={siteSettings?.massIntentionsUrl}
+          url="/intencje-mszalne"
           arrow
           targetBlank
         />
