--- a/src/pages/intencje-mszalne.astro
+++ b/src/pages/intencje-mszalne.astro
@@ -12,10 +12,7 @@ const page = {
 };
 ---
 
-<Layout
-  title={page.title}
-  description={page.description}
->
+<Layout title={page.title} description={page.description}>
   <Hero />
   <section class="page py-10">
     <div class="container mx-auto">
