Fix mobile footer styles

--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -6,7 +6,7 @@ import { siteSettings } from "../../utils/store";
 <footer class="site-footer">
   <div class="container mx-auto relative">
     <div class="footer-grid">
-      <div class="flex flex-col gap-10">
+      <div class="flex flex-col gap-10 w-full lg:w-auto">
         <div class="group">
           <h2 class="heading h4"
             >Parafia pw. św. Michała Archanioła <br class="xl:hidden" />w
@@ -26,7 +26,7 @@ import { siteSettings } from "../../utils/store";
         }
       </div>
       <div class="author">
-        <div class="mb-4 text-right">
+        <div class="mb-4 text-left lg:text-right">
           <Analytics />
         </div>
          Projekt i realizacja – <a
